objects/Employment_Website__c.object
<CustomObject>
    <fields>
        <fullName>Employment_Website_Name__c</fullName>
        <label>Employment Website Name</label>
        <length>144</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Post__c</fullName>
        <label>Price Per Post</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <type>Url</type>
    </fields>
    <label>Employment Website</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employment Website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Websites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>